After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753301 - rmdemux: fix assertion error when freeing tags
rmdemux: fix assertion error when freeing tags
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-06 01:04 UTC by Vineeth
Modified: 2015-08-16 13:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix assertion error (962 bytes, patch)
2015-08-06 01:06 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-08-06 01:04:59 UTC
There is no check for old_tags, before unref'ing it, leading to assertion error.
Comment 1 Vineeth 2015-08-06 01:06:35 UTC
Created attachment 308825 [details] [review]
fix assertion error
Comment 2 Thiago Sousa Santos 2015-08-06 05:01:11 UTC
Review of attachment 308825 [details] [review]:

commit ecb6099b44a1a8e3a1336d746e53db148f15ffeb
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Thu Aug 6 10:05:53 2015 +0900

    rmdemux: fix assertion error when freeing old tags.
    
    Check if old_tags is present before calling gst_tag_list_unref
    
    https://bugzilla.gnome.org/show_bug.cgi?id=753301