rmdemux: fix assertion error when freeing old tags.

Check if old_tags is present before calling gst_tag_list_unref

https://bugzilla.gnome.org/show_bug.cgi?id=753301